--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <h1>Drawing Machine</h1>
   <h3>hit 'S' to save image</h3>
-  <h3>hit 'D' to display image</h3>
+  <h3>hit 'c' to clear image</h3>
 
 </body>
 
